# UDJ-Desktop-Client

./: CMakeLists.txt  ChangeLog  README.md  UDJCPack.cmake  VERSION.cmake  windows_steps
admin/mac/: create-dmg.sh  macdeploy.py  makeMacInstaller.sh
admin/win/: update-vlc.sh
admin/win/nsi/: RELEASE_NOTES.TXT
cmake/: NSIS.template.in
cmake/modules/: FindLIBVLC.cmake  FindPhonon.cmake  FindPhononVLC.cmake  NSIS.template.in
doc/: manpage
res/: udjlauncher.icns
src/: AboutWidget.cpp  AboutWidget.hpp  ActivePlaylistModel.hpp  ActivePlaylistView.cpp  ActivePlaylistView.hpp  ActivityList.cpp  ActivityList.hpp  AddressWidget.cpp  AddressWidget.hpp  CMakeLists.txt  CommErrorHandler.cpp  CommErrorHandler.hpp  ConfigDefs.hpp.in  CreateEventWidget.hpp  DataStore.cpp  DataStore.hpp  DialogWithLoaderWidget.cpp  DialogWithLoaderWidget.hpp  ErrorMessage.cpp  ErrorMessage.hpp  Info.plist  JSONHelper.cpp  JSONHelper.hpp  LibraryView.cpp  LibraryView.hpp  LibraryWidget.cpp  LibraryWidget.hpp  LogViewer.cpp  LogViewer.hpp  Logger.cpp  Logger.hpp  LoginDialog.cpp  LoginDialog.hpp  LoginWidget.cpp  LoginWidget.hpp  MetaWindow.cpp  MetaWindow.hpp  MusicFinder.cpp  MusicFinder.hpp  MusicModel.cpp  (+27 more)
src/attic/: README
src/mac/: UDJApp_Mac.h  UDJApp_Mac.mm
